--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "react-scripts": "3.4.3"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "typescript": "3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "homepage": "https://savi-1311.github.io/react-music"
 }
